app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beeapi
  labels:
    app: beeapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: beeapi
  template:
    metadata:
      labels:
        app: beeapi
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
      - name: beeapi
        image: beeapi:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
