prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  type: NodePort
  ports:
  - port: 9090
    nodePort: 30090  # NodePort range is 30000-32767, you can specify any available port in this range
  selector:
    app: prometheus
