app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beeapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: beeapi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beeapi
            port:
              number: 80
